--- a/style.css
+++ b/style.css
@@ -2,11 +2,14 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
+
+
 }
 
 body{
-    height: 100vh;
+    width: 100%;
     font-family: 'Trebuchet MS', sans-serif;
+
 }
 
 a{
@@ -38,6 +41,7 @@ ul{
     align-items: center;
     justify-content: flex-end;
     padding-right: 30px;
+    width: 70%;
 }
 
 .navigation ul.left-nav a {
@@ -49,7 +53,7 @@ ul{
     background-color: white;
     align-items: center;
     justify-content: flex-end;
-    width: 30%;
+    min-width: 30%;
     padding-right: 50px;
 }
 
@@ -81,7 +85,42 @@ ul{
     color: white;
 }
 
-.left-section img{
-    border-radius: 55px;
+.intro{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 150px);
+    min-width:70%;
+    height: 80%;
+    padding: 140px 10px 0 90px;
 }
 
+.intro p{
+    grid-column: 1/4;
+    grid-row: 3;
+    text-align: right;
+    background-color: red;
+    width: 70%;
+    height: 54px;
+    font-size: 26px;
+    padding: 9px 12px 0 0;
+    border-radius: 6px;
+}
+
+.intro img{
+    grid-column: 1;
+    grid-row: 1;
+    z-index: 1;
+    height: 350px;
+    border-radius: 10px;
+    margin-left: 13px;
+}
+
+.intro h1{
+    grid-column: 2/4;
+    grid-row: 2;
+    margin-left: 10px;
+}
+
+.right-section{
+    width: 30%;
+}
