--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ ul{
 /* Navigation bar */
 .navigation{
     display: flex;
-    height: 100px;
-    font-size: 24px;
+    height: 50px;
+    font-size: 16px;
     background-color: #5e13cf;
 }
 
@@ -73,54 +73,97 @@ ul{
 /* main area */
 
 .main-area{
+    display: flex;
     width: 100%;
-    height: 675px;
+    height: 527px;
 }
 
 .left-section{
     width: 70%;
     background-color: #6715e3;
     height: 100%;
-    font-size: 40px;
+    font-size: 18px;
     color: white;
 }
 
 .intro{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 150px);
-    min-width:70%;
-    height: 80%;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 5px;
+    width:75%;
+    height: 100%;
     padding: 140px 10px 0 90px;
+    justify-content: center;
+    align-items: center;
 }
 
-.intro p{
-    grid-column: 1/4;
-    grid-row: 3;
+.intro-p {
+    grid-column: 1/3;
+    grid-row: 1/2;
     text-align: right;
-    background-color: red;
-    width: 70%;
-    height: 54px;
-    font-size: 26px;
-    padding: 9px 12px 0 0;
+    background-color: #fa8eef;
+    height: 40px;
+    font-size: 18px;
+    padding: 9px 40px 0 0;
     border-radius: 6px;
+    align-self: end;
 }
 
 .intro img{
+    width: 100%;
+    border-radius: 10px;
+    height: 100%;
+}
+
+.intro-img{
     grid-column: 1;
     grid-row: 1;
     z-index: 1;
-    height: 350px;
-    border-radius: 10px;
     margin-left: 13px;
+    align-self: center;
+
 }
 
-.intro h1{
-    grid-column: 2/4;
-    grid-row: 2;
-    margin-left: 10px;
+.intro-h1{
+    grid-column: 2;
+    grid-row: 1;
+    align-self: center;
+    margin-top: 120px;
+    padding: 0 0 0 10px;
 }
 
 .right-section{
     width: 30%;
+    margin-top: 100px;
+}
+
+#color-options{
+    display: flex;
+    flex-direction: column;
+
+
+}
+
+.square{
+    height: 70px;
+    width: 70px;
+    border-radius: 15%;
+    background-color: #262626;
+
+}
+
+#purple, #black{
+    background-color: white;
+    margin-left: -70px;
+}
+
+#blue, #green, #dark{
+    background-color: #6715e3;
+}
+
+.pink{
+    border-radius: 50%;
+    background-color: #fa8eef;
+    margin: -70px 0 0 1px;
 }
