--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
-
-
 }
 
 body{
     width: 100%;
     font-family: 'Trebuchet MS', sans-serif;
+    font-size: 14px;
+    background-color: white;
 
 }
 
@@ -63,7 +63,8 @@ ul{
 
 #name{
     color: white;
-    margin-right: 400px;
+    margin-right: auto;
+    padding-left: 100px;
 }
 
 .navigation ul li a:hover{
@@ -75,7 +76,8 @@ ul{
 .main-area{
     display: flex;
     width: 100%;
-    height: 527px;
+    height: 520px;
+    margin-bottom: 40px;
 }
 
 .left-section{
@@ -90,7 +92,6 @@ ul{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-gap: 5px;
     width:75%;
     height: 100%;
     padding: 140px 10px 0 90px;
@@ -100,20 +101,19 @@ ul{
 
 .intro-p {
     grid-column: 1/3;
-    grid-row: 1/2;
+    grid-row: 2;
     text-align: right;
     background-color: #fa8eef;
     height: 40px;
     font-size: 18px;
     padding: 9px 40px 0 0;
-    border-radius: 6px;
-    align-self: end;
+
+    align-self: start;
 }
 
 .intro img{
-    width: 100%;
-    border-radius: 10px;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 .intro-img{
@@ -121,15 +121,13 @@ ul{
     grid-row: 1;
     z-index: 1;
     margin-left: 13px;
-    align-self: center;
-
 }
 
 .intro-h1{
     grid-column: 2;
     grid-row: 1;
-    align-self: center;
-    margin-top: 120px;
+    align-self: end;
+    margin: 0 0 5px 2px;
     padding: 0 0 0 10px;
 }
 
@@ -141,8 +139,6 @@ ul{
 #color-options{
     display: flex;
     flex-direction: column;
-
-
 }
 
 .square{
@@ -167,3 +163,66 @@ ul{
     background-color: #fa8eef;
     margin: -70px 0 0 1px;
 }
+
+/*Projects*/
+
+.headings{
+    text-align: center;
+    margin-bottom: 40px;
+    font-size: 30px;
+}
+
+.projects{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    margin-bottom: 20px;
+    padding:0 10px 0 10px;
+    color: #f2f3f4;
+}
+
+
+.text{
+    max-width: 85%;
+    background-color: pink;
+    margin: 210px auto 0 auto;
+    text-align: center;
+    opacity: 0.8;
+}
+
+.text:hover{
+    opacity: 1;
+}
+
+.projects > div:hover{
+    opacity: 0.7;
+    color: white;
+}
+
+#library, #tax-calculator, #portfolio-website{
+    width: 100%;
+    height: 350px;
+    border-radius: 50%;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+
+}
+
+#library{
+    background: url("images/Library.jpg") no-repeat
+    center center/cover;
+    border: #6715e3 solid 2px;
+}
+
+#tax-calculator{
+    background: url("images/Tax-Calculator.jpg") no-repeat
+    center center/cover;
+    border: #fa8eef solid 2px;
+}
+
+#portfolio-website{
+    background: url("images/Portfolio-Website.jpg") no-repeat
+    center center/cover;
+    border: #6715e3 solid 2px;
+}
+
