--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,15 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
+
+
 }
 
 body{
     width: 100%;
-    font-family: 'Trebuchet MS', sans-serif;
-    font-size: 14px;
+    font-family: 'Courier New', monospace;
+    font-size: 11px;
     background-color: white;
-
 }
 
 a{
@@ -24,7 +25,7 @@ ul{
 .navigation{
     display: flex;
     height: 50px;
-    font-size: 16px;
+    font-size: 14px;
     background-color: #5e13cf;
 }
 
@@ -77,15 +78,15 @@ ul{
     display: flex;
     width: 100%;
     height: 520px;
-    margin-bottom: 40px;
+
 }
 
 .left-section{
     width: 70%;
     background-color: #6715e3;
-    height: 100%;
     font-size: 18px;
     color: white;
+
 }
 
 .intro{
@@ -94,7 +95,7 @@ ul{
     grid-template-rows: repeat(2, 1fr);
     width:75%;
     height: 100%;
-    padding: 140px 10px 0 90px;
+    padding: 100px 10px 0 90px;
     justify-content: center;
     align-items: center;
 }
@@ -104,10 +105,9 @@ ul{
     grid-row: 2;
     text-align: right;
     background-color: #fa8eef;
-    height: 40px;
-    font-size: 18px;
-    padding: 9px 40px 0 0;
-
+    height: 30px;
+    font-size: 14px;
+    padding: 8px 40px 3px 0;
     align-self: start;
 }
 
@@ -166,63 +166,130 @@ ul{
 
 /*Projects*/
 
-.headings{
+#projects-section, #skills-section{
+    width: 100%;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+}
+
+#projects-section{
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 32%, rgba(255,163,246,1) 100%);
+    margin-top: 60px;
+}
+
+#skills-section{
+    background: linear-gradient(360deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 32%, rgba(255,163,246,1) 100%);
+}
+
+#projects-heading, #skills-heading{
     text-align: center;
     margin-bottom: 40px;
     font-size: 30px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-decoration: overline;
 }
 
-.projects{
-    width: 100%;
+#projects-heading{
+    color: #fa8eef;
+}
+
+#skills-heading{
+    color: #6715e3;
+    margin-top: 40px;
+}
+
+.blocks{
+    width: 80%;
+    height: auto;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    margin-bottom: 20px;
-    padding:0 10px 0 10px;
+    column-gap: 0;
+    padding: 30px;
     color: #f2f3f4;
+    box-shadow: 0px 5px 20px 1px;
+    justify-items: center;
 }
 
+#projects-section .blocks {
+    align-self: flex-end;
+    background-color: #fa8eef;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+#skills-section .blocks {
+    align-self: flex-start;
+    background-color: #6715e3;
+}
 
 .text{
-    max-width: 85%;
+    max-width: 70%;
+    min-width: 70%;
     background-color: pink;
-    margin: 210px auto 0 auto;
+    margin: 190px auto 0 auto;
     text-align: center;
     opacity: 0.8;
+    line-height: 1.4;
+    padding: 1px;
+    border-radius: 5px;
 }
 
 .text:hover{
-    opacity: 1;
-}
-
-.projects > div:hover{
-    opacity: 0.7;
-    color: white;
+    opacity: 0.9;
+    color: rgba(255, 255, 255, 1);
 }
 
 #library, #tax-calculator, #portfolio-website{
-    width: 100%;
-    height: 350px;
+    width: 300px;
+    height: 300px;
     border-radius: 50%;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-
+    border: white solid 1px;
 }
 
 #library{
-    background: url("images/Library.jpg") no-repeat
+    background: url("../images/Library.jpg") no-repeat
     center center/cover;
-    border: #6715e3 solid 2px;
+
 }
 
 #tax-calculator{
-    background: url("images/Tax-Calculator.jpg") no-repeat
+    background: url("../images/Tax-Calculator.jpg") no-repeat
     center center/cover;
-    border: #fa8eef solid 2px;
+
 }
 
 #portfolio-website{
-    background: url("images/Portfolio-Website.jpg") no-repeat
+    background: url("../images/Portfolio-Website.jpg") no-repeat
     center center/cover;
-    border: #6715e3 solid 2px;
+
+}
+
+#skills-section p{
+    text-align: center;
+
+
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 100px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: white;
+    border-radius: 100px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #d8dadd;
+    border-radius: 100px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+
 }
 
