--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ ul {
     background-color: white;
     align-items: center;
     justify-content: flex-end;
-    min-width: 30%;
+    width: 30%;
     padding-right: 50px;
 }
 
@@ -74,7 +74,7 @@ ul {
 
 .main-area {
     display: flex;
-    width: 100%;
+    max-width: 100%;
     height: 520px;
 
 }
@@ -164,7 +164,7 @@ ul {
 /*Projects and skills*/
 
 #projects-section, #skills-section {
-    width: 100%;
+    max-width: 100%;
     height: 500px;
     display: flex;
     flex-direction: column;
@@ -201,11 +201,9 @@ ul {
     width: 80%;
     height: auto;
     display: grid;
-    column-gap: 0;
     padding: 30px;
     color: #f2f3f4;
-    box-shadow: 0 5px 20px 1px;
-    justify-items: center;
+    grid-gap: 10px;
     border: white solid 2px;
 }
 
@@ -222,10 +220,9 @@ ul {
 }
 
 .text {
-    max-width: 70%;
-    min-width: 70%;
+    max-width: 90%;
     background-color: pink;
-    margin: 190px auto 0 auto;
+    margin: 190px auto 5px auto;
     text-align: center;
     opacity: 0.8;
     line-height: 1.4;
@@ -239,11 +236,10 @@ ul {
 }
 
 #library, #tax-calculator, #portfolio-website {
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    box-shadow: rgb(38, 57, 77) 0 20px 30px -10px;
-    border: white solid 1px;
+    max-width: 400px;
+    max-height: 400px;
+    box-shadow: 0 5px 20px 1px #620457;
+    border: white solid 2px;
 }
 
 #library {
@@ -266,13 +262,14 @@ ul {
 
 #skills-section p {
     font-size: 14px;
+    margin-bottom: 20px;
 }
 
 .cards {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    column-gap: 30px;
-    align-content: center;
+    column-gap: 20px;
+    max-width: 95%;
 }
 
 .cards div {
@@ -280,7 +277,8 @@ ul {
     background-color: #6715e3;
     padding: 10px;
     box-shadow: 0 5px 20px 1px #3c0e80;
-    height: 180px;
+    max-width: 150px;
+    max-height: 280px;
 }
 
 footer {
@@ -292,6 +290,7 @@ footer {
     color: white;
     padding: 2px 30px;
     font-size: 14px;
+    margin-top: 10px;
 }
 
 #right-footer {
@@ -319,6 +318,52 @@ footer {
 ::-webkit-scrollbar-thumb {
     background: #d8dadd;
     border-radius: 100px;
+}
+
+@media screen and (max-width: 840px) {
+    .cards {
+        column-gap: 5px;
+    }
+}
+
+@media screen and (max-width: 760px) {
+     .blocks {
+        width: 95%;
+    }
+
+}
+
+@media screen and (max-width: 640px) {
+    .intro{
+        display: flex;
+        flex-direction: column;
+        grid-template-columns: none;
+        grid-template-rows: none;
+        padding: 30px 10px 0 40px;
+    }
+
+    .intro-p {
+        text-align: center;
+        align-self: center;
+        font-size: 10px;
+        padding: 6px 6px;
+
+    }
+
+    .intro-h1{
+        font-size: 12px;
+        text-align: center;
+        align-self: center;
+        margin-top: 5px;
+    }
+
+    .intro-img{
+        align-self: center;
+    }
+
+    .fab{
+        font-size: 3em !important;
+    }
 }
 
 
