--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,18 @@
 
 body {
     width: 100%;
-    font-family: 'Courier New', monospace;
+    font-family: "Times New Roman", Times, serif;;
     font-size: 11px;
     background-color: white;
+    letter-spacing: 2px;
 }
 
 a {
     text-decoration: none;
+}
+
+a, a:visited, a:hover, a:active {
+    color: inherit;
 }
 
 ul {
@@ -24,7 +29,11 @@ ul {
     display: flex;
     height: 50px;
     font-size: 14px;
-    background-color: #5e13cf;
+    background-color: black;
+    color: white;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 .navigation ul {
@@ -32,44 +41,36 @@ ul {
 }
 
 .navigation ul li {
-    padding: 0 12px;
+    padding: 0 11px;
 }
 
 .navigation ul.left-nav {
     flex: 1;
     align-items: center;
     justify-content: flex-end;
-    padding-right: 30px;
     width: 70%;
 }
 
 .navigation ul.left-nav a {
-    color: white;
-    padding-right: 20px;
+    padding-left: 40px;
     cursor: pointer;
 }
 
 .navigation ul.right-nav {
-    background-color: white;
     align-items: center;
     justify-content: flex-end;
-    width: 30%;
+    width: 23%;
     padding-right: 50px;
-}
-
-.right-nav a {
-    color: #262626;
+    color: white;
 }
 
 #name {
     color: white;
     margin-right: auto;
-    padding-left: 100px;
 }
 
 .navigation ul li a:hover {
-    text-decoration: underline;
-    font-weight: bold;
+    opacity: 0.6;
 }
 
 /* main area */
@@ -81,52 +82,28 @@ ul {
 }
 
 .left-section {
-    width: 70%;
-    background-color: #6715e3;
+    width: 100%;
+    background: url("../images/background.jpg") no-repeat center center/cover;
     font-size: 18px;
     color: white;
-}
-
-.intro {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    width: 57%;
-    height: 100%;
-    padding: 100px 10px 0 90px;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: end;
+    padding: 0 30px 0 0;
+    border-right: 4px solid black;
+    border-bottom: 4px solid black;
 }
 
-.intro-p {
-    grid-column: 1/3;
-    grid-row: 2;
-    text-align: right;
-    background-color: #fa8eef;
-    height: 30px;
+.left-section p {
+    text-align: center;
+    background-color: rgba(250, 142, 239, 0.8);
     font-size: 14px;
-    padding: 8px 40px 3px 0;
-    align-self: start;
+    padding: 10px;
 }
 
-.intro img {
-    max-width: 200px;
-    max-height: 230px;
-    border: 2px solid #fa8eef;
-    opacity: 0.8;
-}
-
-.intro-img {
-    grid-column: 1;
-    grid-row: 1;
-    z-index: 1;
-    margin-left: 13px;
-}
-
-.intro-h1 {
-    grid-column: 2;
-    grid-row: 1;
-    align-self: end;
+.left-section h1{
+    font-size: 40px;
     margin: 0 0 5px 2px;
     padding: 0 0 0 10px;
 }
@@ -173,12 +150,7 @@ ul {
 }
 
 #projects-section {
-    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 32%, rgba(255, 163, 246, 1) 100%);
     margin-top: 60px;
-}
-
-#skills-section {
-    background: linear-gradient(360deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 32%, rgba(255, 163, 246, 1) 100%);
 }
 
 #projects-heading, #skills-heading {
@@ -191,21 +163,22 @@ ul {
 }
 
 #projects-heading {
-    color: #fa8eef;
+    color: black;
 }
 
 #skills-heading {
-    color: #6715e3;
-    margin-top: 40px;
+    color: black;
+    margin-top: 10px;
 }
 
 .blocks {
     width: 80%;
+    background: url("../images/wood.jpg") no-repeat center center/cover;
     display: grid;
     padding: 30px;
     color: #f2f3f4;
     grid-gap: 10px;
-    border: white solid 2px;
+    border: 2px solid black;
 }
 
 #projects-section .blocks {
@@ -216,19 +189,23 @@ ul {
 
 #skills-section .blocks {
     align-self: flex-start;
-    background-color: #6715e3;
     height: 300px;
 }
 
 .text {
     max-width: 90%;
-    background-color: pink;
+    background-color: black;
     margin: 190px auto 5px auto;
     text-align: center;
     opacity: 0.8;
     line-height: 1.4;
     padding: 1px;
     border-radius: 5px;
+}
+
+.text a{
+    color: #fa8eef;
+    font-weight: 900;
 }
 
 .text:hover {
@@ -239,13 +216,11 @@ ul {
 #library, #tax-calculator, #nasa-app {
     max-width: 400px;
     max-height: 400px;
-    box-shadow: 0 5px 20px 1px #620457;
-    border: white solid 2px;
+    border: 2px solid black;
 }
 
 #library {
     background: url("../images/Library.jpg") no-repeat center center/cover;
-
 }
 
 #tax-calculator {
@@ -254,7 +229,10 @@ ul {
 
 #nasa-app {
     background: url("../images/spacex.jpg") no-repeat center center/cover;
+}
 
+.cards h3{
+    color: #fa8eef;
 }
 
 #skills-section div h3 {
@@ -274,9 +252,10 @@ ul {
 
 .cards div {
     text-align: center;
-    background-color: #6715e3;
+    color: #fa8eef;
+    background-color: black;
     padding: 5px;
-    box-shadow: 0 5px 20px 1px #3c0e80;
+    box-shadow: 0 5px 20px 1px black;
     max-width: 150px;
     max-height: 200px;
 }
@@ -286,7 +265,7 @@ footer {
     align-items: center;
     width: 100%;
     height: 70px;
-    background: #fa8eef;
+    background: black;
     color: white;
     padding: 2px 30px;
     font-size: 14px;
@@ -327,40 +306,15 @@ footer {
 }
 
 @media screen and (max-width: 760px) {
+    .navigation ul.right-nav {
+        padding-right: 0;
+    }
      .blocks {
         width: 90%;
     }
-
 }
 
 @media screen and (max-width: 640px) {
-    .intro{
-        display: flex;
-        flex-direction: column;
-        grid-template-columns: none;
-        grid-template-rows: none;
-        padding: 30px 10px 0 40px;
-    }
-
-    .intro-p {
-        text-align: center;
-        align-self: center;
-        font-size: 10px;
-        padding: 6px 6px;
-
-    }
-
-    .intro-h1{
-        font-size: 12px;
-        text-align: center;
-        align-self: center;
-        margin-top: 5px;
-    }
-
-    .intro-img{
-        align-self: center;
-    }
-
     .fab{
         font-size: 3em !important;
     }
@@ -377,12 +331,33 @@ footer {
 }
 
 @media screen and (max-width: 480px) {
-    #color-options{
-        display: none;
+
+    .navigation ul.left-nav a {
+        padding-left: 30px;
     }
 
-    .intro {
-        padding: 10px 10px 0 105px;
+    .navigation ul.right-nav a {
+        padding-left: 4px;
+    }
+
+    .navigation ul.left-nav{
+        padding-right: 2px;
+        justify-content: flex-start;
+    }
+
+    .navigation ul li {
+        padding: 0 0 0 1px;
+    }
+
+    .left-section p {
+        font-size: 12px;
+        padding: 8px;
+    }
+
+    .left-section h1{
+        font-size: 30px;
+        margin: 0 0 5px 2px;
+        padding: 0 0 0 10px;
     }
 
     .blocks{
@@ -407,26 +382,17 @@ footer {
         height: 350px;
     }
 
-    .navigation ul.left-nav{
-        padding-right: 5px;
-    }
-
-    .navigation ul.left-nav a {
-        border-left: white solid 1px;
-        padding: 0 0 0 8px;
-    }
-
-    .navigation ul li {
-        padding: 0 3px 0 8px;
-    }
-
-    .intro-p{
-        font-size: 12px;
-        width: 80px;
-        height: 60px;
-    }
-
     footer {
         padding: 2px 20px;
+    }
+}
+
+@media screen and (max-width: 330px) {
+    .navigation ul.left-nav a {
+        padding-left: 20px;
+    }
+
+    .blocks{
+        width: 97%;
     }
 }
